--- a/data/build.gradle
+++ b/data/build.gradle
@@ -37,7 +37,7 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':domain')
+    implementation project(':domain')
     def room_version = "2.4.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
