--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.play.catchtinifing">
 
     <application
+        android:name=".TinifingApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,16 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CatchTinifing">
         <activity
-            android:name="com.play.catchtinifing.present.catch.CatchTinifingActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CatchTinifing">
+            android:name=".present.catchScreen.CatchTinifingActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".present.gameScreen.CatchingGameActivity"/>
     </application>
 
 </manifest>
