--- a/present/build.gradle
+++ b/present/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
 
+    implementation "io.coil-kt:coil:2.0.0-rc03"
+    implementation "io.coil-kt:coil-compose:2.0.0-rc03"
+
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
